<resources>
    <string name="SimpleCalc">My Application</string>
    <string name="soma">/</string>
    <string name="sub">/</string>
    <string name="multi">/</string>
    <string name="divide">/</string>
    <string name="plus_sign">+</string>
    <string name="sub_sign">-</string>
    <string name="multi_sign">*</string>
    <string name="div_sign">/</string>
    <string name="n1_hint">/</string>
    <string name="n2_hint">/</string>
    <string name="valor1_label">Valor 1:</string>
    <string name="valor2_label">Valor 2:</string>
    <string name="res_label">O resultado é::</string>
    <string name="division_by_zero">Não é possível dividir por 0.</string>
</resources>