<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="725dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="357dp"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="156dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rotationX="0"
                    android:text="@string/valor1_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/n1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:hint="@string/n1_hint" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="52dp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor2_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/n2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:hint="@string/n2_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="17dp"
                    android:layout_height="50dp"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/soma"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onClick="somar"
                    android:text="@string/plus_sign" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/sub"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onClick="subtrair"
                    android:text="@string/sub_sign" />

                <Space
                    android:layout_width="47dp"
                    android:layout_height="50dp"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/multi"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onClick="multiplicar"
                    android:text="@string/multi_sign" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/div"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onClick="dividir"
                    android:text="@string/div_sign" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="50dp"
                    android:layout_weight="0" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="227dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/res_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>